--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "test:coverage": "echo \"no test:coverage specified,work in process\""
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^4.6.1",
+    "@stomp/stompjs": "^7.1.0",
     "axios": "^1.1.3",
     "dayjs": "^1.10.8",
     "echarts": "5.1.2",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "qrcode.vue": "^1.7.0",
+    "sockjs-client": "^1.6.1",
     "tdesign-icons-vue": "^0.2.0",
     "tdesign-vue": "^1.9.0",
     "tvision-color": "~1.6.0",
